docs bable 관련 라이브러리 설치

--- a/package.json
+++ b/package.json
@@ -19,5 +19,12 @@
     "redux-thunk": "^2.3.0",
     "styled-component": "^2.8.0",
     "styled-reset": "^4.3.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.13.10",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.13.10",
+    "@babel/preset-react": "^7.12.13"
   }
 }
