--- a/package.json
+++ b/package.json
@@ -27,6 +27,14 @@
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
-    "core-js": "^3.9.1"
+    "clean-webpack-plugin": "^3.0.0",
+    "core-js": "^3.9.1",
+    "dotenv-webpack": "^7.0.1",
+    "html-webpack-plugin": "^5.3.1",
+    "webpack": "^5.24.4",
+    "webpack-bundle-analyzer": "^4.4.0",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3"
   }
 }
