--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "without-cra",
   "version": "1.0.0",
-  "description": "CRA를 사용하지 않고 리액트 환경설정을 해보자.",
+  "description": "1.",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -20,6 +17,10 @@
     "styled-components": "^5.2.1",
     "styled-reset": "^4.3.4"
   },
+  "scripts": {
+    "start": "webpack-dev-server --env=dev --progress",
+    "build": "webpack --env=prod --progress"
+  },
   "devDependencies": {
     "@babel/core": "^7.13.10",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
@@ -28,13 +29,15 @@
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
-    "core-js": "^3.9.1",
+    "css-loader": "^5.1.2",
     "dotenv-webpack": "^7.0.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
-    "webpack": "^5.24.4",
-    "webpack-bundle-analyzer": "^4.4.0",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2",
+    "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.6.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.7.3"
   }
 }
